--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 <body>
   <h1></h1>
 
-  <img src="1.jpg" alt="Foto 1"><br>
-  <img src="2.jpg" alt="Foto 2"><br>
-  <img src="3.jpg" alt="Foto 3"><br>
-  <img src="4.jpg" alt="Foto 4"><br>
-  <img src="5.jpg" alt="Foto 5"><br>
-  <img src="6.jpg" alt="Foto 6"><br>
-  <img src="7.jpg" alt="Foto 7"><br>
-  <img src="8.jpg" alt="Foto 8"><br>
-  <img src="9.jpg" alt="Foto 9"><br>
-  <img src="10.jpg" alt="Foto 10"><br>
+  <img src="1.jpg" alt="Foto 1" width="870"><br>
+  <img src="2.jpg" alt="Foto 2" width="870"><br>
+  <img src="3.jpg" alt="Foto 3" width="870"><br>
+  <img src="4.jpg" alt="Foto 4" width="870"><br>
+  <img src="5.jpg" alt="Foto 5" width="870"><br>
+  <img src="6.jpg" alt="Foto 6" width="870"><br>
+  <img src="7.jpg" alt="Foto 7" width="870"><br>
+  <img src="8.jpg" alt="Foto 8" width="870"><br>
+  <img src="9.jpg" alt="Foto 9" width="870"><br>
+  <img src="10.jpg" alt="Foto 10" width="870"><br>
 
 </body>
 </html>
